--- a/src/app/modules/play-table/play-table.component.css
+++ b/src/app/modules/play-table/play-table.component.css
@@ -1,6 +1,10 @@
 #table {
-  max-width: 100%;
-  height: auto;
+  width: 600px;
+  height: 300px;
   display: block;
   margin: auto;
+  background-image: url(../../../assets/img/game_table.png);
+  background-size: contain;
 }
+
+
