--- a/src/app/modules/play-table/play-table.component.html
+++ b/src/app/modules/play-table/play-table.component.html
@@ -1,4 +1,6 @@
 <h5>
   {{title}}
 </h5>
-<img src="../../../assets/img/game_table.png" id="table">
+<div id="table">
+  <app-players></app-players>
+</div>
