--- a/src/app/modules/play-table/play-table.component.html
+++ b/src/app/modules/play-table/play-table.component.html
@@ -2,5 +2,6 @@
   {{title}}
 </h5>
 <div id="table">
+  <img src="../../../assets/img/game_table.png" id="table-img">
   <app-players></app-players>
 </div>
