--- a/src/app/modules/play-table/players.component.css
+++ b/src/app/modules/play-table/players.component.css
@@ -9,24 +9,29 @@
 .players{
   position: absolute;
   width: 13%;
-  height: 30%;
+  height: 35%;
   border: 3px solid darkred;
 }
+.btn_position-img{
+  height: auto;
+  max-width: 100%;
+  position: absolute;
+}
 #p0 {
-  top: 3%;
-  left: 22%;
+  top: 0;
+  left: 20%;
 }
 #p1 {
-  top: 3%;
-  left: 37%;
+  top: 0;
+  left: 35%;
 }
 #p2 {
-  top: 3%;
-  left: 52%;
+  top: 0;
+  left: 50%;
 }
 #p3 {
-  top: 3%;
-  left: 67%;
+  top: 0;
+  left: 65%;
 }
 #p4 {
   top: 40%;
@@ -35,25 +40,46 @@
   height: 19%;
 }
 #p5 {
-  bottom: 3%;
-  left: 67%;
+  bottom: 0;
+  left: 65%;
 }
 #p6 {
-  bottom: 3%;
-  left: 52%;
+  bottom: 0;
+  left: 50%;
 }
 #p7 {
-  bottom: 3%;
-  left: 37%;
+  bottom: 0;
+  left: 35%;
 }
 #p8 {
-  bottom: 3%;
-  left: 22%;
+  bottom: 0;
+  left: 20%;
 }
 #p9 {
   top: 40%;
   left: 0;
   width: 20%;
   height: 19%;
+}
+
+#p0 .btn_position-img, #p1 .btn_position-img, #p2 .btn_position-img, #p3 .btn_position-img {
+  bottom: 26%;
+  left: 22%;
+}
+#p5 .btn_position-img, #p6 .btn_position-img, #p7 .btn_position-img, #p8 .btn_position-img {
+  top: 0;
+  left: 22%;
+}
+#p4 .btn_position-img {
+  top: 0;
+  left: 0;
+  width: auto;
+  max-height: 100%;
+}
+#p9 .btn_position-img {
+    top: 0;
+    right: 0;
+  width: auto;
+  max-height: 100%;
 }
 
