--- a/src/app/modules/play-table/players.component.html
+++ b/src/app/modules/play-table/players.component.html
@@ -1,12 +1,11 @@
 <div id="base">
   <div *ngFor="let player of players" class="players" id="p{{player.position}}">
     <div *ngIf="displayPositions && player.empty">
-        <img src="../../../assets/img/btn_position_0.png"
-             class="btn_position-img"
-             (mouseover)="btnLocationOver($event)"
-             (mousedown)="btnLocationDown($event)"
-             (mouseup)="btnLocationUp($event, player)"
-             (mouseleave)="btnLocationOut($event)">
+        <img [src]="b_Position.srcNone" [class]="b_Position.cssClass"
+             (mouseover)="b_Position.onOver($event)"
+             (mousedown)="b_Position.onDown($event)"
+             (mouseleave)="b_Position.onOut($event)"
+             (mouseup)="b_Position.onUp($event, player)">
       </div>
   </div>
 
