--- a/src/app/modules/play-table/players.component.css
+++ b/src/app/modules/play-table/players.component.css
@@ -120,6 +120,39 @@
   height: 38%;
   position: absolute;
 }
+.btn_name_appointee-img, .btn_name_player-img{
+  width: 100%;
+  height: 20%;
+  position: absolute;
+  z-index: 3;
+}
+.text-over-btn{
+  position: absolute;
+  display: block;
+  left: 13%;
+  top: 6%;
+  font-size: 1.3vw;
+  z-index: 4;
+  font-weight: bold;
+  color: white;
+}
+.panel-balance-img{
+  top:18%;
+  width: 100%;
+  height: 20%;
+  position: absolute;
+  z-index: 3;
+}
+.text-balance{
+  position: absolute;
+  display: block;
+  left: 13%;
+  top: 24%;
+  font-size: 1.3vw;
+  z-index: 4;
+  font-weight: bold;
+  color: white;
+}
 
 #p0 .btn_position-img, #p1 .btn_position-img, #p2 .btn_position-img, #p3 .btn_position-img {
   bottom: 26%;
