--- a/src/app/modules/play-table/players.component.html
+++ b/src/app/modules/play-table/players.component.html
@@ -7,8 +7,33 @@
         (mouseleave)="b_Position.onOut($event)"
         (mouseup)="b_Position.onUp($event, player)">
     </div>
-    <div *ngIf="!player.empty">
-      {{player.name}} <br/> {{player.balance}}
+    <div *ngIf="!player.empty && player.isAppointee">
+      <div>
+        <img [src]="b_Name_appointee.srcNone" [class]="b_Name_appointee.cssClass"
+             (mouseover)="b_Name_appointee.onOver($event)"
+             (mousedown)="b_Name_appointee.onDown($event)"
+             (mouseleave)="b_Name_appointee.onOut($event)"
+             (mouseup)="b_Name_appointee.onUp($event, player)" #spy>
+        <p class="text-over-btn">{{player.name}}</p>
+      </div>
+      <div>
+        <img src="../../../assets/img/panel_balance_appointee.png" class="panel-balance-img">
+        <p class="text-balance">{{player.balance}}</p>
+      </div>
+    </div>
+    <div *ngIf="!player.empty && !player.isAppointee">
+      <div>
+        <img [src]="b_Name_player.srcNone" [class]="b_Name_player.cssClass"
+             (mouseover)="b_Name_player.onOver($event)"
+             (mousedown)="b_Name_player.onDown($event)"
+             (mouseleave)="b_Name_player.onOut($event)"
+             (mouseup)="b_Name_player.onUp($event, player)" #spy>
+        <p class="text-over-btn">{{player.name}}</p>
+      </div>
+      <div>
+        <img src="../../../assets/img/panel_balance_player.png" class="panel-balance-img">
+        <p class="text-balance">{{player.balance}}</p>
+      </div>
     </div>
   </div>
 
