--- a/src/app/modules/play-table/players.component.css
+++ b/src/app/modules/play-table/players.component.css
@@ -105,7 +105,7 @@
   font-weight: bold;
   color: white;
 }
-.btn_dealer-img{
+.btn_dealer-img, .btn_gamedealer-img{
   width: 22%;
   height: 10%;
   position: absolute;
@@ -177,7 +177,8 @@
 #p0 .text-balance, #p1 .text-balance, #p2 .text-balance, #p3 .text-balance{
   top: 34%;
 }
-#p0 .btn_dealer-img, #p1 .btn_dealer-img, #p2 .btn_dealer-img,#p3 .btn_dealer-img {
+#p0 .btn_dealer-img, #p0 .btn_gamedealer-img, #p1 .btn_dealer-img, #p1 .btn_gamedealer-img,
+#p2 .btn_dealer-img, #p2 .btn_gamedealer-img, #p3 .btn_dealer-img, #p3 .btn_gamedealer-img {
   bottom: 25%;
   left: 0;
 }
@@ -213,7 +214,7 @@
   left: 56%;
   top: 48%;
 }
-#p4 .btn_dealer-img{
+#p4 .btn_dealer-img, #p4 .btn_gamedealer-img{
   width: 13%;
   height: 23%;
   left: 32%;
@@ -239,7 +240,8 @@
 #p5 .text-balance, #p6 .text-balance, #p7 .text-balance, #p8 .text-balance{
   top: 78%;
 }
-#p5 .btn_dealer-img, #p6 .btn_dealer-img, #p7 .btn_dealer-img,#p8 .btn_dealer-img {
+#p5 .btn_dealer-img, #p5 .btn_gamedealer-img, #p6 .btn_dealer-img, #p6 .btn_gamedealer-img,
+#p7 .btn_dealer-img, #p7 .btn_gamedealer-img, #p8 .btn_dealer-img, #p8 .btn_gamedealer-img {
   top: 25%;
   right: 0;
 }
@@ -275,7 +277,7 @@
   left: 10%;
   top: 48%;
 }
-#p9 .btn_dealer-img{
+#p9 .btn_dealer-img, #p9 .btn_gamedealer-img{
   width: 13%;
   height: 23%;
   right: 38%;
