--- a/src/app/modules/play-table/css/cards.css
+++ b/src/app/modules/play-table/css/cards.css
@@ -50,3 +50,33 @@
   height: 44.05%;
   left: 68%;
 }
+#card-10-0  {
+  top: 25%;
+  width: 7.45%;
+  height: 44.05%;
+  right: 22%;
+}
+#card-10-1  {
+  top: 25%;
+  width: 7.45%;
+  height: 44.05%;
+  right: 30%;
+}
+#card-10-2  {
+  top: 25%;
+  width: 7.45%;
+  height: 44.05%;
+  right: 38%;
+}
+#card-10-3  {
+  top: 25%;
+  width: 7.45%;
+  height: 44.05%;
+  right: 46%;
+}
+#card-10-4  {
+  top: 25%;
+  width: 7.45%;
+  height: 44.05%;
+  right: 54%;
+}
