fix card selecting

--- a/src/app/modules/play-table/players.component.html
+++ b/src/app/modules/play-table/players.component.html
@@ -202,7 +202,7 @@
     <div *ngIf="cardPanelChooseCard">
       <div *ngFor="let card of cardPanelCards">
         <img [src]="card.srcImg" [class]="card.cssClass"  [id]="card.cssId"
-             (click)="cardSelectSuit(card.id)">
+             (click)="cardSelectId(card.id)">
       </div>
     </div>
   </div>
