--- a/src/app/modules/play-table/play-table.component.html
+++ b/src/app/modules/play-table/play-table.component.html
@@ -4,32 +4,32 @@
 <div id="table">
   <img src="../../../assets/img/game_table.png" id="table-img">
   <div id="base">
-    <div *ngFor="let player of players" class="players" id="p{{player.position}}">
-      <div *ngIf="displayPositions && player.empty">
-        <img [src]="b_Position.srcNone" [class]="b_Position.cssClass"
-             (mouseover)="b_Position.onOver($event)"
-             (mousedown)="b_Position.onDown($event)"
-             (mouseleave)="b_Position.onOut($event)"
-             (mouseup)="b_Position.onUp($event, player)">
+    <div *ngFor="let player of playersBlock.players" class="players" id="p{{player.position}}">
+      <div *ngIf="playersBlock.displayPositions && player.empty">
+        <img [src]="playersBlock.b_Position.srcNone" [class]="playersBlock.b_Position.cssClass"
+             (mouseover)="playersBlock.b_Position.onOver($event)"
+             (mousedown)="playersBlock.b_Position.onDown($event)"
+             (mouseleave)="playersBlock.b_Position.onOut($event)"
+             (mouseup)="playersBlock.b_Position.onUp($event, player)">
       </div>
 
       <div *ngIf="!player.empty && player.isAppointee">
-        <img [src]="b_Name_appointee.srcNone" [class]="b_Name_appointee.cssClass"
-             (mouseover)="b_Name_appointee.onOver($event)"
-             (mousedown)="b_Name_appointee.onDown($event)"
-             (mouseleave)="b_Name_appointee.onOut($event)"
-             (mouseup)="b_Name_appointee.onUp($event, player)">
+        <img [src]="playersBlock.b_Name_appointee.srcNone" [class]="playersBlock.b_Name_appointee.cssClass"
+             (mouseover)="playersBlock.b_Name_appointee.onOver($event)"
+             (mousedown)="playersBlock.b_Name_appointee.onDown($event)"
+             (mouseleave)="playersBlock.b_Name_appointee.onOut($event)"
+             (mouseup)="playersBlock.b_Name_appointee.onUp($event, player)">
         <p class="text-over-btn">{{player.name}}</p>
         <img src="../../../assets/img/panel_balance_appointee.png" class="panel-balance-img">
         <p class="text-balance">{{player.balance}}</p>
       </div>
       <div *ngIf="!player.empty && !player.isAppointee">
         <div>
-          <img [src]="b_Name_player.srcNone" [class]="b_Name_player.cssClass"
-               (mouseover)="b_Name_player.onOver($event)"
-               (mousedown)="b_Name_player.onDown($event)"
-               (mouseleave)="b_Name_player.onOut($event)"
-               (mouseup)="b_Name_player.onUp($event, player)">
+          <img [src]="playersBlock.b_Name_player.srcNone" [class]="playersBlock.b_Name_player.cssClass"
+               (mouseover)="playersBlock.b_Name_player.onOver($event)"
+               (mousedown)="playersBlock.b_Name_player.onDown($event)"
+               (mouseleave)="playersBlock.b_Name_player.onOut($event)"
+               (mouseup)="playersBlock.b_Name_player.onUp($event, player)">
           <p class="text-over-btn">{{player.name}}</p>
         </div>
         <div>
@@ -40,108 +40,108 @@
 
       <div class="card-0">
         <img [src]="player.card_0.srcImg" [class]="player.card_0.cssClass"  [id]="player.card_0.cssId"
-             (mouseover)="selectCard(player.card_0, 'over')"
-             (mousedown)="selectCard(player.card_0, 'down')"
-             (mouseleave)="selectCard(player.card_0, 'leave')"
-             (mouseup)="selectCard(player.card_0, 'up')">
+             (mouseover)="playersBlock.selectCard(player.card_0, 'over')"
+             (mousedown)="playersBlock.selectCard(player.card_0, 'down')"
+             (mouseleave)="playersBlock.selectCard(player.card_0, 'leave')"
+             (mouseup)="playersBlock.selectCard(player.card_0, 'up')">
       </div>
       <div class="card-1">
         <img [src]="player.card_1.srcImg" [class]="player.card_1.cssClass"  [id]="player.card_1.cssId"
-             (mouseover)="selectCard(player.card_1, 'over')"
-             (mousedown)="selectCard(player.card_1, 'down')"
-             (mouseleave)="selectCard(player.card_1, 'leave')"
-             (mouseup)="selectCard(player.card_1, 'up')">
+             (mouseover)="playersBlock.selectCard(player.card_1, 'over')"
+             (mousedown)="playersBlock.selectCard(player.card_1, 'down')"
+             (mouseleave)="playersBlock.selectCard(player.card_1, 'leave')"
+             (mouseup)="playersBlock.selectCard(player.card_1, 'up')">
       </div>
 
-      <div *ngIf="!player.empty && displaySelectDealer">
-        <img [src]="b_Dealer_init.srcNone" [class]="b_Dealer_init.cssClass"
-             (mouseover)="b_Dealer_init.onOver($event)"
-             (mousedown)="b_Dealer_init.onDown($event)"
-             (mouseleave)="b_Dealer_init.onOut($event)"
-             (mouseup)="b_Dealer_init.onUp($event, player)">
+      <div *ngIf="!player.empty && playersBlock.displaySelectDealer">
+        <img [src]="playersBlock.b_Dealer_init.srcNone" [class]="playersBlock.b_Dealer_init.cssClass"
+             (mouseover)="playersBlock.b_Dealer_init.onOver($event)"
+             (mousedown)="playersBlock.b_Dealer_init.onDown($event)"
+             (mouseleave)="playersBlock.b_Dealer_init.onOut($event)"
+             (mouseup)="playersBlock.b_Dealer_init.onUp($event, player)">
       </div>
       <div *ngIf="player.isDealer">
-        <img [src]="b_Dealer_game.srcNone" [class]="b_Dealer_game.cssClass"
-             (mouseover)="b_Dealer_game.onOver($event)"
-             (mousedown)="b_Dealer_game.onDown($event)"
-             (mouseleave)="b_Dealer_game.onOut($event)"
-             (mouseup)="b_Dealer_game.onUp($event, player)">
+        <img [src]="playersBlock.b_Dealer_game.srcNone" [class]="playersBlock.b_Dealer_game.cssClass"
+             (mouseover)="playersBlock.b_Dealer_game.onOver($event)"
+             (mousedown)="playersBlock.b_Dealer_game.onDown($event)"
+             (mouseleave)="playersBlock.b_Dealer_game.onOut($event)"
+             (mouseup)="playersBlock.b_Dealer_game.onUp($event, player)">
       </div>
     </div>
 
     <div id="banker">
       <div class="card-0">
         <img [src]="banker.card_0.srcImg" [class]="banker.card_0.cssClass"  [id]="banker.card_0.cssId"
-             (mouseover)="selectCard(banker.card_0, 'over')"
-             (mousedown)="selectCard(banker.card_0, 'down')"
-             (mouseleave)="selectCard(banker.card_0, 'leave')"
-             (mouseup)="selectCard(banker.card_0, 'up')">
+             (mouseover)="playersBlock.selectCard(banker.card_0, 'over')"
+             (mousedown)="playersBlock.selectCard(banker.card_0, 'down')"
+             (mouseleave)="playersBlock.selectCard(banker.card_0, 'leave')"
+             (mouseup)="playersBlock.selectCard(banker.card_0, 'up')">
       </div>
       <div class="card-1">
         <img [src]="banker.card_1.srcImg" [class]="banker.card_1.cssClass"  [id]="banker.card_1.cssId"
-             (mouseover)="selectCard(banker.card_1, 'over')"
-             (mousedown)="selectCard(banker.card_1, 'down')"
-             (mouseleave)="selectCard(banker.card_1, 'leave')"
-             (mouseup)="selectCard(banker.card_1, 'up')">
+             (mouseover)="playersBlock.selectCard(banker.card_1, 'over')"
+             (mousedown)="playersBlock.selectCard(banker.card_1, 'down')"
+             (mouseleave)="playersBlock.selectCard(banker.card_1, 'leave')"
+             (mouseup)="playersBlock.selectCard(banker.card_1, 'up')">
       </div>
       <div class="card-2">
         <img [src]="banker.card_2.srcImg" [class]="banker.card_2.cssClass"  [id]="banker.card_2.cssId"
-             (mouseover)="selectCard(banker.card_2, 'over')"
-             (mousedown)="selectCard(banker.card_2, 'down')"
-             (mouseleave)="selectCard(banker.card_2, 'leave')"
-             (mouseup)="selectCard(banker.card_2, 'up')">
+             (mouseover)="playersBlock.selectCard(banker.card_2, 'over')"
+             (mousedown)="playersBlock.selectCard(banker.card_2, 'down')"
+             (mouseleave)="playersBlock.selectCard(banker.card_2, 'leave')"
+             (mouseup)="playersBlock.selectCard(banker.card_2, 'up')">
       </div>
       <div class="card-3">
         <img [src]="banker.card_3.srcImg" [class]="banker.card_3.cssClass"  [id]="banker.card_3.cssId"
-             (mouseover)="selectCard(banker.card_3, 'over')"
-             (mousedown)="selectCard(banker.card_3, 'down')"
-             (mouseleave)="selectCard(banker.card_3, 'leave')"
-             (mouseup)="selectCard(banker.card_3, 'up')">
+             (mouseover)="playersBlock.selectCard(banker.card_3, 'over')"
+             (mousedown)="playersBlock.selectCard(banker.card_3, 'down')"
+             (mouseleave)="playersBlock.selectCard(banker.card_3, 'leave')"
+             (mouseup)="playersBlock.selectCard(banker.card_3, 'up')">
       </div>
       <div class="card-4">
         <img [src]="banker.card_4.srcImg" [class]="banker.card_4.cssClass"  [id]="banker.card_4.cssId"
-             (mouseover)="selectCard(banker.card_4, 'over')"
-             (mousedown)="selectCard(banker.card_4, 'down')"
-             (mouseleave)="selectCard(banker.card_4, 'leave')"
-             (mouseup)="selectCard(banker.card_4, 'up')">
+             (mouseover)="playersBlock.selectCard(banker.card_4, 'over')"
+             (mousedown)="playersBlock.selectCard(banker.card_4, 'down')"
+             (mouseleave)="playersBlock.selectCard(banker.card_4, 'leave')"
+             (mouseup)="playersBlock.selectCard(banker.card_4, 'up')">
       </div>
     </div>
 
-    <div *ngIf="displayAppointeePanel" id="appointeePanel">
+    <div *ngIf="panelBlock.displayAppointeePanel" id="appointeePanel">
       <img src="../../../assets/img/panel.png" id="appointeePanel-img">
 
       <div class="panel-form-div container">
-        <form (ngSubmit)="panelSave()" #playersPanelForm="ngForm">
+        <form (ngSubmit)="panelBlock.panelSave()" #playersPanelForm="ngForm">
 
           <h2 style="color: white">You are here</h2>
 
           <div class="form-group" >
             <label for="balance" style="color: white">Balance</label>
             <input type="number" class="form-control" id="balance" required
-                   [(ngModel)]="playerPanelData.balance" name="balance">
+                   [(ngModel)]="panelBlock.playerPanelData.balance" name="balance">
           </div>
         </form>
       </div>
 
 
       <img *ngIf="playersPanelForm.form.valid"
-           [src]="b_Ok.srcNone" [class]="b_Ok.cssClass"
-           (mouseover)="b_Ok.onOver($event)"
-           (mousedown)="b_Ok.onDown($event)"
-           (mouseleave)="b_Ok.onOut($event)"
-           (mouseup)="b_Ok.onUp($event, player)">
-      <img [src]="b_Deny.srcNone" [class]="b_Deny.cssClass"
-           (mouseover)="b_Deny.onOver($event)"
-           (mousedown)="b_Deny.onDown($event)"
-           (mouseleave)="b_Deny.onOut($event)"
-           (mouseup)="b_Deny.onUp($event, player)">
-      <img [src]="b_Delete.srcNone" [class]="b_Delete.cssClass"
-           (mouseover)="b_Delete.onOver($event)"
-           (mousedown)="b_Delete.onDown($event)"
-           (mouseleave)="b_Delete.onOut($event)"
-           (mouseup)="b_Delete.onUp($event, player)">
+           [src]="panelBlock.b_Ok.srcNone" [class]="panelBlock.b_Ok.cssClass"
+           (mouseover)="panelBlock.b_Ok.onOver($event)"
+           (mousedown)="panelBlock.b_Ok.onDown($event)"
+           (mouseleave)="panelBlock.b_Ok.onOut($event)"
+           (mouseup)="panelBlock.b_Ok.onUp($event, player)">
+      <img [src]="panelBlock.b_Deny.srcNone" [class]="panelBlock.b_Deny.cssClass"
+           (mouseover)="panelBlock.b_Deny.onOver($event)"
+           (mousedown)="panelBlock.b_Deny.onDown($event)"
+           (mouseleave)="panelBlock.b_Deny.onOut($event)"
+           (mouseup)="panelBlock.b_Deny.onUp($event, player)">
+      <img [src]="panelBlock.b_Delete.srcNone" [class]="panelBlock.b_Delete.cssClass"
+           (mouseover)="panelBlock.b_Delete.onOver($event)"
+           (mousedown)="panelBlock.b_Delete.onDown($event)"
+           (mouseleave)="panelBlock.b_Delete.onOut($event)"
+           (mouseup)="panelBlock.b_Delete.onUp($event, player)">
     </div>
-    <div *ngIf="displayPlayersPanel" id="playerPanel">
+    <div *ngIf="panelBlock.displayPlayersPanel" id="playerPanel">
       <img src="../../../assets/img/panel.png" id="playerPanel-img">
 
       <div class="panel-form-div container">
@@ -149,64 +149,65 @@
           <div class="form-group">
             <label for="name" style="color: white">Nickname</label>
             <input type="text" class="form-control" id="name" required
-                   [(ngModel)]="playerPanelData.name" name="name">
+                   [(ngModel)]="panelBlock.playerPanelData.name" name="name">
           </div>
 
           <div class="form-group" >
             <label for="balance" style="color: white">Balance</label>
             <input type="number" class="form-control" id="balance" required
-                   [(ngModel)]="playerPanelData.balance" name="balance">
+                   [(ngModel)]="panelBlock.playerPanelData.balance" name="balance">
           </div>
         </form>
       </div>
 
 
       <img *ngIf="playersPanelForm.form.valid"
-           [src]="b_Ok.srcNone" [class]="b_Ok.cssClass"
-           (mouseover)="b_Ok.onOver($event)"
-           (mousedown)="b_Ok.onDown($event)"
-           (mouseleave)="b_Ok.onOut($event)"
-           (mouseup)="b_Ok.onUp($event, player)">
-      <img [src]="b_Deny.srcNone" [class]="b_Deny.cssClass"
-           (mouseover)="b_Deny.onOver($event)"
-           (mousedown)="b_Deny.onDown($event)"
-           (mouseleave)="b_Deny.onOut($event)"
-           (mouseup)="b_Deny.onUp($event, player)">
-      <img [src]="b_Delete.srcNone" [class]="b_Delete.cssClass"
-           (mouseover)="b_Delete.onOver($event)"
-           (mousedown)="b_Delete.onDown($event)"
-           (mouseleave)="b_Delete.onOut($event)"
-           (mouseup)="b_Delete.onUp($event, player)">
+           [src]="panelBlock.b_Ok.srcNone" [class]="panelBlock.b_Ok.cssClass"
+           (mouseover)="panelBlock.b_Ok.onOver($event)"
+           (mousedown)="panelBlock.b_Ok.onDown($event)"
+           (mouseleave)="panelBlock.b_Ok.onOut($event)"
+           (mouseup)="panelBlock.b_Ok.onUp($event, player)">
+      <img [src]="panelBlock.b_Deny.srcNone" [class]="panelBlock.b_Deny.cssClass"
+           (mouseover)="panelBlock.b_Deny.onOver($event)"
+           (mousedown)="panelBlock.b_Deny.onDown($event)"
+           (mouseleave)="panelBlock.b_Deny.onOut($event)"
+           (mouseup)="panelBlock.b_Deny.onUp($event, player)">
+      <img [src]="panelBlock.b_Delete.srcNone" [class]="panelBlock.b_Delete.cssClass"
+           (mouseover)="panelBlock.b_Delete.onOver($event)"
+           (mousedown)="panelBlock.b_Delete.onDown($event)"
+           (mouseleave)="panelBlock.b_Delete.onOut($event)"
+           (mouseup)="panelBlock.b_Delete.onUp($event, player)">
     </div>
-    <div *ngIf="displayCardPanel" id="cardPanel">
+
+    <div *ngIf="panelBlock.displayCardPanel" id="cardPanel">
       <img src="../../../assets/img/panel.png" id="cardPanel-img">
-      <div *ngIf="cardPanelChooseSuit" id="selectSuit">
-        <img [src]="b_suit_d.srcNone" [class]="b_suit_d.cssClass"
-             (mouseover)="b_suit_d.onOver($event)"
-             (mousedown)="b_suit_d.onDown($event)"
-             (mouseleave)="b_suit_d.onOut($event)"
-             (mouseup)="b_suit_d.onUp($event, 'd')">
-        <img [src]="b_suit_h.srcNone" [class]="b_suit_h.cssClass"
-             (mouseover)="b_suit_h.onOver($event)"
-             (mousedown)="b_suit_h.onDown($event)"
-             (mouseleave)="b_suit_h.onOut($event)"
-             (mouseup)="b_suit_h.onUp($event, 'h')">
-        <img [src]="b_suit_s.srcNone" [class]="b_suit_s.cssClass"
-             (mouseover)="b_suit_s.onOver($event)"
-             (mousedown)="b_suit_s.onDown($event)"
-             (mouseleave)="b_suit_s.onOut($event)"
-             (mouseup)="b_suit_s.onUp($event, 's')">
-        <img [src]="b_suit_c.srcNone" [class]="b_suit_c.cssClass"
-             (mouseover)="b_suit_c.onOver($event)"
-             (mousedown)="b_suit_c.onDown($event)"
-             (mouseleave)="b_suit_c.onOut($event)"
-             (mouseup)="b_suit_c.onUp($event, 'c')">
+      <div *ngIf="panelBlock.cardPanelChooseSuit" id="selectSuit">
+        <img [src]="panelBlock.b_suit_d.srcNone" [class]="panelBlock.b_suit_d.cssClass"
+             (mouseover)="panelBlock.b_suit_d.onOver($event)"
+             (mousedown)="panelBlock.b_suit_d.onDown($event)"
+             (mouseleave)="panelBlock.b_suit_d.onOut($event)"
+             (mouseup)="panelBlock.b_suit_d.onUp($event, 'd')">
+        <img [src]="panelBlock.b_suit_h.srcNone" [class]="panelBlock.b_suit_h.cssClass"
+             (mouseover)="panelBlock.b_suit_h.onOver($event)"
+             (mousedown)="panelBlock.b_suit_h.onDown($event)"
+             (mouseleave)="panelBlock.b_suit_h.onOut($event)"
+             (mouseup)="panelBlock.b_suit_h.onUp($event, 'h')">
+        <img [src]="panelBlock.b_suit_s.srcNone" [class]="panelBlock.b_suit_s.cssClass"
+             (mouseover)="panelBlock.b_suit_s.onOver($event)"
+             (mousedown)="panelBlock.b_suit_s.onDown($event)"
+             (mouseleave)="panelBlock.b_suit_s.onOut($event)"
+             (mouseup)="panelBlock.b_suit_s.onUp($event, 's')">
+        <img [src]="panelBlock.b_suit_c.srcNone" [class]="panelBlock.b_suit_c.cssClass"
+             (mouseover)="panelBlock.b_suit_c.onOver($event)"
+             (mousedown)="panelBlock.b_suit_c.onDown($event)"
+             (mouseleave)="panelBlock.b_suit_c.onOut($event)"
+             (mouseup)="panelBlock.b_suit_c.onUp($event, 'c')">
       </div>
 
-      <div *ngIf="cardPanelChooseCard">
-        <div *ngFor="let card of cardPanelCards">
+      <div *ngIf="panelBlock.cardPanelChooseCard">
+        <div *ngFor="let card of panelBlock.cardPanelCards">
           <img [src]="card.srcImg" [class]="card.cssClass"  [id]="card.cssId"
-               (click)="cardSelectId(card.id)">
+               (click)="panelBlock.cardSelectId(card.id)">
         </div>
       </div>
     </div>
